# ocaml-coreutils

./: LICENSE  README.md  build.sh  dune-project  ocaml_coreutils.opam
lib/: customIO.ml  dune
src/: cat.ml  echo.ml  false.ml  pwd.ml  true.ml  yes.ml
test/: dune
